[package]
name = "alrc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
dialoguer = "0.11.0"
directories = "6.0.0"
shell-words = "1.1.0"
regex = "1.11.1"
itertools = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
linfa = "0.7"
linfa-clustering = "0.7"
